じゃんけんの手を選んでCPUと対戦する処理を実装する

--- a/src/main/resources/templates/janken.html
+++ b/src/main/resources/templates/janken.html
@@ -11,6 +11,11 @@
   <p>
   <h1> <span th:text="${name}"></span></h1>
   </p>
+  <a href="/jankengame?hand=Gu">ぐー</a> <a href="/jankengame?hand=Choki">ちょき</a> <a href="/jankengame?hand=Pa">ぱー</a>
+  <br>
+  [[${hand}]]<br>
+  [[${chand}]]<br>
+  [[${result}]]<br>
 </body>
 
 </html>
