--- a/src/main/resources/templates/janken.html
+++ b/src/main/resources/templates/janken.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.springframework.org/schema/security">
+
+</html>
 <html>
 
 <head>
@@ -10,7 +13,16 @@
   <a href="/logout">ログアウト</a>
   <h1>Janken Game!</h1>
   <p>
-  <h1> <span th:text="${name}"></span></h1>
+    エントリー
+  <ul>
+    <li th:each="user : ${entry.users}">[[${user}]]</li>
+
+  </ul>
+  </p>
+  <p>
+    <span th:text="${n}"></span></h1>
+    Hi
+    <nobr sec:authentication="name"></nobr>
   </p>
   <a href="/jankengame?hand=Gu">ぐー</a> <a href="/jankengame?hand=Choki">ちょき</a> <a href="/jankengame?hand=Pa">ぱー</a>
   <br>
