--- a/src/main/resources/templates/janken.html
+++ b/src/main/resources/templates/janken.html
@@ -17,6 +17,17 @@
   <ul>
     <li th:each="user : ${entry.users}">[[${user}]]</li>
 
+    <p th:if="${n5}">
+      <!--statはステータス変数
+          https://www.ne.jp/asahi/hishidama/home/tech/java/spring/boot/thymeleaf/th_each.html
+        -->
+    <div th:each="user,stat:${n5}">
+      <tr>
+        <td>Index:[[${stat.index}]]</td>
+        <td>ID:[[${user.id}]]</td>
+        <td>ユーザ名:[[${user.name}]]</td>
+      </tr>
+
   </ul>
   </p>
   <p>
